--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ h1{
     border: none;
     border-radius: 3px;
     background: #40A8C4;
-    color:#fff;
+    color:rgb(228, 0, 0);
     cursor: pointer;
   }
 
